fixed responsive headers on small screens

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -396,7 +396,7 @@ main {
     }
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
   main {
     table {
       .abs {
